--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@reduxjs/toolkit": "^1.9.5",
     "date-fns": "^3.4.0",
     "gsap": "^3.12.2",
+    "i18next": "^23.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.0",
     "react-icons": "^4.10.1",
     "react-paginate": "^8.2.0",
     "react-redux": "^8.1.2",
